--- a/IK/Views/Default/Index.cshtml
+++ b/IK/Views/Default/Index.cshtml
@@ -119,16 +119,16 @@
     </div>
 
     <div class="card-container">
-        <div class="card" onclick="location.href='personel_ekle.html'">
+        <a href="/Staff/Create/" class="card">
             <img src="https://d1nhio0ox7pgb.cloudfront.net/_img/v_collection_png/512x512/shadow/businessman_add.png" alt="Resim 4 Açıklama">
             <div class="card-label">Personel Ekle</div>
 
-        </div>
-        <div class="card" onclick="location.href='Personel.cshtml'">
+        </a>
+        <a href="/Staff/Index/" class="card">
             <img src="https://www.kromaks.com/uploads/kadro/MTVhMjA3NDhmOTY1YTg.png" alt="Resim 1 Açıklama">
             <div class="card-label">Personel</div>
 
-        </div>
+        </a>
 
         <div class="card" onclick="location.href='PersonelDegerlendirme.html'">
             <img src="https://cdn-icons-png.flaticon.com/512/4310/4310896.png" alt="Resim 4 Açıklama">
