--- a/IK/Views/Login/SignUp.cshtml
+++ b/IK/Views/Login/SignUp.cshtml
@@ -3,7 +3,161 @@
     ViewData["Title"] = "SignUp";
     Layout = null;
 }
-<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Giriş Sayfası</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #eef2f7;
+            margin: 0;
+            padding: 0;
+            height: 100vh;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+
+
+        .appbar {
+            width: 100%;
+            height: 50px;
+            background-color: #2c3e50;
+            /* Boho sarısı */
+            padding: 10px 0;
+            /* padding azaltıldı */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            position: fixed;
+            top: 0;
+            left: 0;
+            z-index: 10;
+        }
+
+        .h1 {
+            color: #fff;
+        }
+
+
+        .login-container {
+            max-width: 700px;
+            background-color: #fff;
+            padding: 40px;
+            border-radius: 8px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+        }
+
+        label {
+            display: block;
+            font-weight: 600;
+            margin-top: 15px;
+        }
+
+        input {
+            width: 100%;
+            padding: 10px;
+            border-radius: 5px;
+            border: 1px solid #d1d8e4;
+            font-size: 14px;
+            box-sizing: border-box;
+        }
+
+        .submit-button {
+            display: block;
+            width: 100%;
+            margin-top: 20px;
+            background-color: #34495e;
+            color: #ecf0f1;
+            border: none;
+            padding: 12px 24px;
+            cursor: pointer;
+            font-size: 16px;
+            border-radius: 5px;
+            transition: background-color 0.3s;
+        }
+
+        .footer {
+            text-align: center;
+            display: flex;
+            position: fixed;
+            padding: 20px 0;
+            bottom: 0;
+            z-index: 10;
+        }
+
+            .footer img {
+                max-width: 100px;
+            }
+
+        .submit-button:hover {
+            background-color: #2c3e50;
+        }
+
+        .password-toggle {
+            cursor: pointer;
+            display: inline-block;
+            margin-left: 5px;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="appbar">
+        <h1 class="h1">İnsan Kaynakları Uygulaması</h1>
+    </div>
+    <div class="login-container">
+        <h2 style="text-align: center;">Kayıt Ol</h2>
+        @using (Html.BeginForm("SignUp", "Login", FormMethod.Post))
+        {
+            <!-- 2 column grid layout with text inputs for the first and last names -->
+
+            <div class="form-outline mb-4">
+                <label for="UserName" class="control-label">Username</label>
+                @Html.TextBoxFor(x=>x.UserName, new{@class="form-control"})
+                @Html.ValidationMessageFor(x=>x.UserName,"" , new{@class="text-danger"})
+            </div>
+            <div class="form-outline mb-4">
+                <label for="Mail" class="control-label">E-Mail</label>
+                @Html.TextBoxFor(x=>x.Mail,new{@class="form-control"})
+                @Html.ValidationMessageFor(x=>x.Mail,"" , new{@class="text-danger"} )
+            </div>
+            <div class="form-outline mb-4">
+                <label for="Phone" class="control-label">Phone</label>
+                @Html.TextBoxFor(x=>x.Phone,new{@class="form-control" , @type="phone"})
+                @Html.ValidationMessageFor(x=>x.Phone,"" , new{@class="text-danger"} )
+            </div>
+
+            <div class="form-outline mb-4">
+                <label for="Password" class="control-label">Password</label>
+                @Html.TextBoxFor(x=>x.Password,new{@class="form-control" , @type="password"})
+                @Html.ValidationMessageFor(x=>x.Password,"" , new{@class="text-danger"} )
+
+            </div>
+            <div class="form-outline mb-4">
+                <label for="Password" class="control-label">Confirm Password</label>
+                @Html.TextBoxFor(x=>x.ConfirmPassword,new{@class="form-control" , @type="password"})
+                @Html.ValidationMessageFor(x=>x.ConfirmPassword,"" , new{@class="text-danger"} )
+
+            </div>
+            <div class="pt-2 pb-2">
+                <button type="submit" class="btn btn-primary btn-block mb-4 btnSumbit" value="">Register</button>
+            </div>
+        }
+    </div>
+    <div class="footer">
+        <img src="https://www.bilsoft.com/images/logolar/bilsoft_logo_1.png" alt="Footer Logo">
+    </div>
+</body>
+
+</html>
+@*<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 
 <!-- Section: Design Block -->
@@ -86,4 +240,4 @@
 <script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
 <script src="/lib/jquery/dist/jquery.min.js"></script>
 <script src="/lib/jquery/dist/jquery.js"></script>
-
+*@
